.k8s/fixit-backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fixit-backend
  namespace: fixit
spec:
  selector:
    app: fixit-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
