.k8s/fixit-backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fixit-backend-ingress
  namespace: fixit
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /fixit-backend/actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
spec:
  rules:
    - http:
        paths:
          - path: /fixit-backend
            pathType: Prefix
            backend:
              service:
                name: fixit-backend
                port:
                  number: 80
